--- a/package.json
+++ b/package.json
@@ -11,27 +11,10 @@
     "ecommerce api",
     "shopping cart api"
   ],
-  "homepage": "https://cezerin.com",
+  "homepage": "https://cezerin.org",
   "bugs": "https://github.com/cezerin2/client/issues",
-  "license": "MIT",
-  "author": {
-    "name": "Restmount <jsonmount@gmail.com>",
-    "url": "https://github.com/restmount"
-  },
-  "contributors": [
-    {
-      "name": "Luke Busstra <luke.busstra@gmail.com>",
-      "url": "https://github.com/lubuss"
-    },
-    {
-      "name": "Restmount <jsonmount@gmail.com>",
-      "url": "https://github.com/restmount"
-    },
-    {
-      "name": "Sergey Onufrienko <sergey@onufrienko.com>",
-      "url": "https://github.com/sonufrienko"
-    }
-  ],
+  "license": "Unlicense",
+  "author": "Restmount, Himadu Sirimanna",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
