--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:8
+      - image: circleci/node
 
     working_directory: ~/repo
 
@@ -27,6 +27,10 @@ jobs:
 
       - store_test_results:
           path: reports
+
+      - run:
+          name: Lint
+          command: prettier --write .
 
       - run:
           name: Build
