--- a/package.json
+++ b/package.json
@@ -51,14 +51,15 @@
   },
   "dependencies": {
     "cross-fetch": "^3.0.4",
-    "query-string": "^6.1.0"
+    "query-string": "^6.1.0",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "@babel/cli": "^6.26.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/preset-env": "^7.9.5",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.4.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
